# deal-radar

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
src/deal_radar/: __init__.py  __main__.py  cli.py  errors.py  logging.py  models.py  paths.py  pipeline.py  ratelimit.py  scheduler.py
src/deal_radar/ai/: __init__.py  base.py  claude.py  composer.py  prompt.py
src/deal_radar/config/: __init__.py  loader.py  schema.py
src/deal_radar/dedup/: __init__.py  base.py  sqlite_store.py
src/deal_radar/marketplaces/: __init__.py  base.py  facebook.py  registry.py
src/deal_radar/messaging/: __init__.py  drafter.py  offer.py  store.py
src/deal_radar/notifiers/: __init__.py  base.py  ntfy.py  registry.py
src/deal_radar/web/: __init__.py  app.py  controller.py  runner.py  sender.py
tests/: test_ai.py  test_cli.py  test_config.py  test_dedup.py  test_facebook_helpers.py  test_messaging.py  test_models.py  test_ntfy.py  test_pipeline.py  test_ratelimit.py  test_scheduler.py  test_web.py
