[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deal-radar"
version = "0.0.1"
description = "Config-driven marketplace monitor with Claude listing evaluation (personal use)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6",
  "python-dotenv>=1",
  "httpx>=0.27",
  "tenacity>=8",
  "anthropic>=0.69",
  "playwright>=1.44",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "types-PyYAML", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
deal-radar = "deal_radar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deal_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# app.py embeds the web UI's HTML/CSS/JS as a string literal with long lines.
"src/deal_radar/web/app.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
